# SimplifiedSpreadsheet

./: Avg.cpp  Avg.h  CMakeLists.txt  Cell.cpp  Cell.h  Formula.cpp  Formula.h  Max.cpp  Max.h  Min.cpp  Min.h  Observer.h  README.md  Spreadsheet.cpp  Spreadsheet.h  Subject.h  Sum.cpp  Sum.h  UserInterface.cpp  UserInterface.h  main.cpp
test/: AvgTest.cpp  CMakeLists.txt  CellFixture.cpp  CellTest.cpp  MaxTest.cpp  MinTest.cpp  SpreadsheetFixture.cpp  SpreadsheetTest.cpp  SumTest.cpp  runAllTests.cpp
